# threatbridge

./: .env.example  .gitignore  .mcp.ci.json  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  lint-workflows.yml  prescripts.yml  security-advisory.yml  security-triage.yml  tests.yml
.security/: deployment.yml
cve_intel/: __init__.py  cli.py  config.py  doctor.py  mcp_server.py  pipeline.py  progress.py
cve_intel/enrichment/: attack_enricher.py  claude_client.py  ioc_extractor.py  prompts.py
cve_intel/fetchers/: attack_data.py  nvd.py  osv.py  resolver.py  scanner_input.py  sigmahq.py  vulnrichment.py
cve_intel/generators/: sigma_gen.py  snort_gen.py  suricata_gen.py  yara_gen.py
cve_intel/mappers/: cvss_signals.py  cvss_to_attack.py  cwe_to_attack.py
cve_intel/models/: __init__.py  attack.py  cve.py  ioc.py  rules.py
cve_intel/output/: json_renderer.py  sarif_renderer.py  text_renderer.py  vex_renderer.py
data/: cwe_attack_map.json
tests/: conftest.py  test_attack_data.py  test_batch.py  test_config.py  test_cvss_signals.py  test_enrichment.py  test_generators.py  test_mappers.py  test_mcp_server.py  test_models.py  test_nvd_fetcher.py  test_pipeline.py  test_sarif_gate.py  test_sarif_renderer.py  test_sigmahq.py  test_vex.py  test_vulnrichment.py
tests/fixtures/: nvd_response_CVE-2024-21762.json  scan_results.sarif.fixture
